[ff84d688424632e31c068a6664e4dcea61ffa401]: Ajusta links das imagens

--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -583,10 +583,10 @@ Abaixo listamos pontos que devem estar prontos antes da integração:</p>
 <p>Veja o fluxo abaixo:</p>
 
 <p><strong>Fluxo de integração Checkout Cielo</strong> - Diagrama sequêncial
-<img src="https://developercielo.github.io/images/Checkout/fluxobasico.svg" alt="Fluxo de integração Checkout Cielo" /></p>
+<img src="https://developercielo.github.io/images/checkout/fluxobasico.svg" alt="Fluxo de integração Checkout Cielo" /></p>
 
 <p><strong>Fluxo de integração Checkout Cielo</strong> - Fluxograma
-<img src="https://developercielo.github.io/images/Checkout/fluxocheckoutbasico.png" alt="Fluxo de integração Checkout Cielo" /></p>
+<img src="https://developercielo.github.io/images/checkout/fluxocheckoutbasico.png" alt="Fluxo de integração Checkout Cielo" /></p>
 
 <p>Após o portador do cartão (consumidor) selecionar suas compras e apertar o botão “Comprar” de uma loja já integrada ao Checkout Cielo, o fluxo nesta ordem:</p>
 
@@ -610,7 +610,7 @@ Abaixo listamos pontos que devem estar prontos antes da integração:</p>
 
 <p>O modo de teste pode ser ativado na aba <strong>Configurações</strong>, onde existe um caixa de seleção, que quando marcada, habilitará o modo de teste do Checkout Cielo. O modo somente se iniciará quando a seleção for salva.</p>
 
-<p><img src="https://developercielo.github.io/images/Checkout/tm01.png" alt="Ativando Modo de teste" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tm01.png" alt="Ativando Modo de teste" /></p>
 
 <p>Quando a opção for salva, uma tarja vermelha será exibida na parte superior da tela. Ela será exibida em todas as telas do <a href="http://developercielo.github.io/Checkout-Backoffice/">Backoffice Cielo Checkout</a> e na tela transacional do Checkout Cielo.</p>
 
@@ -625,8 +625,8 @@ Abaixo listamos pontos que devem estar prontos antes da integração:</p>
   </thead>
   <tbody>
     <tr>
-      <td><img src="https://developercielo.github.io/images/Checkout/tmbackoffice.png" alt="Tarja vermelha - Backoffice" /></td>
-      <td><img src="https://developercielo.github.io/images/Checkout/tmtransacional.png" alt="Tarja vermelha - Transacional" /></td>
+      <td><img src="https://developercielo.github.io/images/checkout/tmbackoffice.png" alt="Tarja vermelha - Backoffice" /></td>
+      <td><img src="https://developercielo.github.io/images/checkout/tmtransacional.png" alt="Tarja vermelha - Transacional" /></td>
     </tr>
   </tbody>
 </table>
@@ -771,7 +771,7 @@ Basta acessar nosso <a href="https://developercielo.github.io/Tutorial//Postman"
 
 <p>Abaixo, é demonstrado como o fluxo de compra ocorre na integração via API:</p>
 
-<p><img src="https://developercielo.github.iohttps://developercielo.github.io/images/Checkout/intapi.png" alt="Integração Via API" /></p>
+<p><img src="https://developercielo.github.iohttps://developercielo.github.io/images/checkout/intapi.png" alt="Integração Via API" /></p>
 
 <h3 id="criando-o-carrinho">Criando o Carrinho</h3>
 
@@ -1300,8 +1300,8 @@ Os descontos disponíveis no Checkout Cielo são:</p>
   </thead>
   <tbody>
     <tr>
-      <td><img src="https://developercielo.github.io/images/Checkout/checkout-discount-percent.png" alt="Percentual" /></td>
-      <td><img src="https://developercielo.github.io/images/Checkout/checkout-discount-amount.png" alt="Valor" /></td>
+      <td><img src="https://developercielo.github.io/images/checkout/checkout-discount-percent.png" alt="Percentual" /></td>
+      <td><img src="https://developercielo.github.io/images/checkout/checkout-discount-amount.png" alt="Valor" /></td>
     </tr>
   </tbody>
 </table>
@@ -1364,7 +1364,7 @@ Os descontos disponíveis no Checkout Cielo são:</p>
   </thead>
   <tbody>
     <tr>
-      <td><img src="https://developercielo.github.io/images/Checkout/checkout-discount-mp.png" alt="Meios de pagamento" /></td>
+      <td><img src="https://developercielo.github.io/images/checkout/checkout-discount-mp.png" alt="Meios de pagamento" /></td>
     </tr>
   </tbody>
 </table>
@@ -1416,23 +1416,23 @@ Os descontos disponíveis no Checkout Cielo são:</p>
   <tbody>
     <tr>
       <td><code class="highlighter-rouge">FixedAmount</code></td>
-      <td><img src="https://developercielo.github.io/images/Checkout/fixedamount.png" alt="FixedAmount" /></td>
+      <td><img src="https://developercielo.github.io/images/checkout/fixedamount.png" alt="FixedAmount" /></td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Free</code></td>
-      <td><img src="https://developercielo.github.io/images/Checkout/free.png" alt="Free" /></td>
+      <td><img src="https://developercielo.github.io/images/checkout/free.png" alt="Free" /></td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">WithoutShippingPickUp</code></td>
-      <td><img src="https://developercielo.github.io/images/Checkout/withoutshippingpickup.png" alt="WithoutShippingPickUp" /></td>
+      <td><img src="https://developercielo.github.io/images/checkout/withoutshippingpickup.png" alt="WithoutShippingPickUp" /></td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">WithoutShipping</code></td>
-      <td><img src="https://developercielo.github.io/images/Checkout/withoutshippingpickup.png" alt="WithoutShipping" /></td>
+      <td><img src="https://developercielo.github.io/images/checkout/withoutshippingpickup.png" alt="WithoutShipping" /></td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Correios</code></td>
-      <td><img src="https://developercielo.github.io/images/Checkout/correios.png" alt="Correios" /></td>
+      <td><img src="https://developercielo.github.io/images/checkout/correios.png" alt="Correios" /></td>
     </tr>
   </tbody>
 </table>
@@ -1693,12 +1693,12 @@ Esse tipo de integração é realizado via o cadastro de um conjunto de itens a 
   </thead>
   <tbody>
     <tr>
-      <td><img src="https://developercielo.github.io/images/Checkout/botao.png" alt="Botão" /></td>
+      <td><img src="https://developercielo.github.io/images/checkout/botao.png" alt="Botão" /></td>
       <td style="text-align: center"><strong>Botão</strong></td>
       <td>É um código HTML que ao ser colado em um site, vai direcionar o comprador a tela transacional - Ideal para uso em <strong>hotSites</strong> ou <strong>E-mail Marketing</strong></td>
     </tr>
     <tr>
-      <td><img src="https://developercielo.github.io/images/Checkout/qrcode.png" alt="QRCODE" /></td>
+      <td><img src="https://developercielo.github.io/images/checkout/qrcode.png" alt="QRCODE" /></td>
       <td style="text-align: center"><strong>QRCODE</strong></td>
       <td>Código interpretável por Smartphones e Tablets - Ideal para uso em <strong>Marketing impressos</strong> ou <strong>Digital</strong></td>
     </tr>
@@ -1751,7 +1751,7 @@ Esse tipo de integração é realizado via o cadastro de um conjunto de itens a 
 
 <p><strong>Abaixo, o fluxo de pagamento via Botão:</strong></p>
 
-<p><img src="https://developercielo.github.io/images/Checkout/intbt.png" alt="Fluxo de integração Checkout Cielo Botão" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/intbt.png" alt="Fluxo de integração Checkout Cielo Botão" /></p>
 
 <h3 id="criando-o-botão">Criando o Botão</h3>
 
@@ -1759,11 +1759,11 @@ Esse tipo de integração é realizado via o cadastro de um conjunto de itens a 
 
 <p><strong>Tela de Cadastro:</strong></p>
 
-<p><img src="https://developercielo.github.io/images/Checkout/btcadastro.png" alt="Cadastro de Botão" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/btcadastro.png" alt="Cadastro de Botão" /></p>
 
 <p><strong>Botão Cadastrado:</strong></p>
 
-<p><img src="https://developercielo.github.io/images/Checkout/btcadastro2.png" alt="Cadastro de Botão" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/btcadastro2.png" alt="Cadastro de Botão" /></p>
 
 <p>Abaixo a listagem de itens que devem ser cadastrados para a criação do botão:</p>
 
@@ -2238,7 +2238,7 @@ Vale destacar que o Checkout realiza a notificação somente quando uma transaç
   <li>Cadastre as URLS e escolhe o tipo de Notificação desejado</li>
 </ol>
 
-<p><img src="https://developercielo.github.io/images/Checkout/urls.png" alt="Cadastro de URLS" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/urls.png" alt="Cadastro de URLS" /></p>
 
 <h2 id="notificação-post">Notificação: POST</h2>
 
@@ -2253,7 +2253,7 @@ Vale destacar que o Checkout realiza a notificação somente quando uma transaç
 
 <p>Abaixo o Fluxo de uma Notificação POST</p>
 
-<p><img src="https://developercielo.github.io/images/Checkout/npost.png" alt="Fluxo N.POST" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/npost.png" alt="Fluxo N.POST" /></p>
 
 <p><strong>Retorno aguardado para o envio da notificação:</strong> <code class="highlighter-rouge">HttpStatus = 200 (OK)</code> - Post recebido e processado com sucesso</p>
 
@@ -2261,7 +2261,7 @@ Vale destacar que o Checkout realiza a notificação somente quando uma transaç
 
 <p>Caso o POST não seja recebido, é possível reenvia-lo manualmente, basta acessar o pedido em questão pelo Backoffice e clicar no Ícone de envio:</p>
 
-<p><img src="https://developercielo.github.io/images/Checkout/reenvipost.png" alt="Reenvio de notificação" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/reenvipost.png" alt="Reenvio de notificação" /></p>
 
 <p>Veja a descrição dos itens de notificação na sessão <strong>“Conteúdo do POST de NOTIFICAÇÃO”</strong></p>
 
@@ -2281,7 +2281,7 @@ Essa modalidade de notificação é baseada em um <code class="highlighter-rouge
 
 <p>Abaixo o Fluxo de uma Notificação JSON (Criação da transação + Mudança de status)</p>
 
-<p><img src="https://developercielo.github.io/images/Checkout/njson.png" alt="Fluxo N.JSON" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/njson.png" alt="Fluxo N.JSON" /></p>
 
 <p><strong>Conteúdo do POST de NOTIFICAÇÃO JSON:</strong></p>
 
@@ -2361,7 +2361,7 @@ Essa modalidade de notificação é baseada em um <code class="highlighter-rouge
 
 <p>Caso o POST não seja recebido, é possível reenvia-lo manualmente, basta acessar o pedido em questão pelo Backoffice e clicar no Ícone de envio:</p>
 
-<p><img src="https://developercielo.github.io/images/Checkout/reenvipost.png" alt="Reenvio de notificação" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/reenvipost.png" alt="Reenvio de notificação" /></p>
 
 <h2 id="conteúdo-da-notificação">Conteúdo da Notificação</h2>
 
@@ -2849,7 +2849,7 @@ Existem dois métodos de parcelamento:</p>
 
 <p>Neste modo, o lojista controla o limite máximo de parcelas que a loja realizará pelo Backoffice Checkout. O Valor das parcelas é definido acessando a aba <strong>Configurações</strong> e alterando a sessão <strong>Pagamentos</strong></p>
 
-<p><img src="https://developercielo.github.io/images/Checkout/parcelamento.png" alt="Seleção de Parcelas" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/parcelamento.png" alt="Seleção de Parcelas" /></p>
 
 <p><strong>OBS:</strong> O Check Box deve estar marcado para que o meio de pagamento seja exibido na tela transacional.</p>
 
@@ -3152,7 +3152,7 @@ Se no contrato técnico existir o nó da recorrência, fica obrigatório o tipo 
 
 <p><img src="https://developercielo.github.io/images/checkout-cancelar-recorrencia.png" alt="Pedido de recorrência" />
 <br />
-<img src="https://developercielo.github.io/images/Checkout/pedidoreccance.png" alt="Cancelamento de recorrência" /></p>
+<img src="https://developercielo.github.io/images/checkout/pedidoreccance.png" alt="Cancelamento de recorrência" /></p>
 
 <p>Tela de detalhes da Recorrência</p>
 
