--- a/tutorial/checkout-tutoriais.html
+++ b/tutorial/checkout-tutoriais.html
@@ -113,19 +113,19 @@
 
 <p>Para acessar o Backoffice do Checkout Cielo, é necessário que o lojista <strong><a href="https://www.cielo.com.br/minha-conta">realize login no Site Cielo</a></strong>, inserindo sua Afiliação (Nº de estabelecimento) e Usuário:</p>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-login.png" alt="Login Backoffice Cielo" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-login.png" alt="Login Backoffice Cielo" /></p>
 
 <p>Em seguida é necessário incluir sua Senha:</p>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-login-senha.png" alt="Senha Backoffice Cielo" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-login-senha.png" alt="Senha Backoffice Cielo" /></p>
 
 <p>Na área de “Vendas Online” basta clicar em Checkout Cielo.</p>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-vendas-online.png" alt="Vendas online" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-vendas-online.png" alt="Vendas online" /></p>
 
 <p>Caso o site principal da Cielo não esteja disponível, basta acessar a URL <a href="https://cieloecommerce.cielo.com.br/backoffice">https://cieloecommerce.cielo.com.br/backoffice</a> e inserir seu e-mail de cadastro e senha.</p>
 
-<p><a href="/images/Checkout/TutorialCheckout/checkout-cielo.png">!Checkout Cielo</a></p>
+<p><a href="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-cielo.png">!Checkout Cielo</a></p>
 
 <h2 id="abas-do-backoffice-checkout-cielo">Abas do Backoffice Checkout Cielo</h2>
 
@@ -181,7 +181,7 @@
 
 <aside class="warning">Por padrão, transações de crédito expiram em 15 dias. Após esse perido, elas não podem ser capturadas.</aside>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-dashboard.png" alt="DashBoard" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-dashboard.png" alt="DashBoard" /></p>
 
 <h2 id="aba-pedidos">Aba Pedidos</h2>
 
@@ -190,11 +190,11 @@ O resultado da pesquisa é exposto em forma de uma listagem de transações que 
 
 <p>Listagem de Pedidos</p>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-pedidos.png" alt="Pedidos" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-pedidos.png" alt="Pedidos" /></p>
 
 <p>Detalhes dos Pedidos</p>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-pedidos-detalhes.png" alt="Detalhes do Pedido" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-pedidos-detalhes.png" alt="Detalhes do Pedido" /></p>
 
 <h2 id="aba-link-de-pagamento">Aba Link de Pagamento</h2>
 
@@ -211,7 +211,7 @@ O resultado da pesquisa é exposto em forma de uma listagem de transações que 
 
 <h3 id="listar-link-de-pagamentos-cadastrados">Listar Link de pagamentos Cadastrados</h3>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-listar-link-de-pagamentos.png" alt="Produtos cadastrados" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-listar-link-de-pagamentos.png" alt="Produtos cadastrados" /></p>
 
 <p>Clicando no Titulo ou SKU do produto, você será redirecionado a página de informações de Produto, onde todas as características do produto são informadas e onde você pode definir o padrão do Botão (caso a sua integração seja com base no Botão Checkout Cielo) a ser usado na venda desse produto.</p>
 
@@ -230,7 +230,7 @@ O Checkout Cielo considera 5 tipos de produtos: Material Físico, Digital, Servi
   <li><strong>Pagamentos</strong> - Pagamentos unicos ou transferência de valores Ex: quitação de dividas etc</li>
 </ul>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-cadastrar-link-de-pagamentos.png" alt="Cadastrar Link de pagamentos" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-cadastrar-link-de-pagamentos.png" alt="Cadastrar Link de pagamentos" /></p>
 
 <aside class="notice">Material Físico exige que um tipo de frete seja cadastrado. </aside>
 
@@ -242,7 +242,7 @@ O Checkout Cielo considera 5 tipos de produtos: Material Físico, Digital, Servi
 
 <p>Após realizar o cadastro do produto/Link de pagamento, a seguinte loja será exibida:</p>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-detalhes-Link-de-pagamentos.png" alt="Detalhes do produto" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-detalhes-link-de-pagamentos.png" alt="Detalhes do produto" /></p>
 
 <p>O Link de pagamentos é exibido de <strong>3 maneiras:</strong></p>
 
@@ -286,7 +286,7 @@ O Checkout Cielo considera 5 tipos de produtos: Material Físico, Digital, Servi
 
 <p>Esse relatorio apresenta as vendas pagas em um determinado periodo de tempo, sendo separadas por meio de pagamento. Selecionando o periodo e  tipo de pagamento, após pressionar “Buscar” o resultado será apresentado.</p>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-relatorio-financeiro.png" alt="Relatório financeiro" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-relatorio-financeiro.png" alt="Relatório financeiro" /></p>
 
 <h3 id="relatório-detalhado-de-vendas">Relatório detalhado de vendas.</h3>
 
@@ -294,7 +294,7 @@ O Checkout Cielo considera 5 tipos de produtos: Material Físico, Digital, Servi
 
 <aside class="notice">Pedidos realizados no Modo de teste não são apresentados nesse relatório, mesmo que estejam com o status “PAGO”</aside>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-relatorio-detalhado-vendas.png" alt="Relatório detalhado de vendas" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-relatorio-detalhado-vendas.png" alt="Relatório detalhado de vendas" /></p>
 
 <h3 id="listagem-de-clientes">Listagem de clientes</h3>
 
@@ -345,17 +345,17 @@ O Checkout Cielo considera 5 tipos de produtos: Material Físico, Digital, Servi
 
 <p>A lista do valor cobrado pelos serviços oferecidos pela Cielo será apresentada neste relatório. Todos os dados dos planos e custos transacionais serão apresentados aqui:</p>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-extrato-cobranca.png" alt="Extrato de cobrança" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-extrato-cobranca.png" alt="Extrato de cobrança" /></p>
 
 <h3 id="relatório-de-recorrência">Relatório de Recorrência</h3>
 
 <p>Nesse relatório é possível pesquisar o conjunto de recorrência e suas transações com base em seu ID ou por Status e Intervalo de ocorrência.</p>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-relatorio-recorrencia.png" alt="Relatório de Recorrências" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-relatorio-recorrencia.png" alt="Relatório de Recorrências" /></p>
 
 <p>Ao clicar no “+” é aberto a tela de Detalhes da recorrência:</p>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-detalhes-da-recorrencia.png" alt="Detalhes da Recorrência" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-detalhes-da-recorrencia.png" alt="Detalhes da Recorrência" /></p>
 
 <p>Os Detalhes da recorrência informam o carrinho e o histórico de transações agendadas. Ao clicar em “+Detalhes” o lojista é direcionado a tela de detalhes de Pedidos (Ver item “PEDIDOS”)</p>
 
@@ -371,7 +371,7 @@ O Checkout Cielo considera 5 tipos de produtos: Material Físico, Digital, Servi
 
 <p>Nesta página constam os manuais do Checkout Cielo, assim como a pagina de FAQ e de “Duvidas”, onde o lojista pode entrar em contato com a equipe de suporte Checkout Cielo.</p>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-suporte.png" alt="Dúvidas" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-suporte.png" alt="Dúvidas" /></p>
 
 <p>Nessa pagina é possivel entrar em contato a respeito de duvidas Operacionais, tecnicas e Comerciais  e ter acesso aos documentos técnicos e de suporte do Checkout Cielo.</p>
 
@@ -388,7 +388,7 @@ O Checkout Cielo considera 5 tipos de produtos: Material Físico, Digital, Servi
 
 <p>Aqui é possivel alterar o logo do meio de pagamento disponível em sua loja e a cor de fundo do site via o uso da caixa de opções ou digitando o código relativo a cor escolhida (As cores estão no padrão RGB).</p>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-configuracoes-loja.png" alt="Configuração Exibição" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-configuracoes-loja.png" alt="Configuração Exibição" /></p>
 
 <aside class="notice">O logo de sua loja será exibido na tela de Checkout centralizado.</aside>
 
@@ -396,7 +396,7 @@ O Checkout Cielo considera 5 tipos de produtos: Material Físico, Digital, Servi
 
 <p>Nesta tela é possível alterar as configurações dos meios de pagamento disponíveis em sua loja, os definindo como ativos ou não, e configurar a URL de retorno, notificação e Mudança de Status.</p>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-configuracoes-pagamento.png" alt="Configuração Exibição" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-configuracoes-pagamento.png" alt="Configuração Exibição" /></p>
 
 <h4 id="modo-de-teste-checkout-cielo">Modo de Teste Checkout Cielo</h4>
 
@@ -404,7 +404,7 @@ O Checkout Cielo considera 5 tipos de produtos: Material Físico, Digital, Servi
 
 <p>O modo de teste pode ser ativado marcando a caixa de seleção:</p>
 
-<p><img src="https://developercielo.github.io/images/Checkout/tm01.png" alt="Ativando Modo de teste" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tm01.png" alt="Ativando Modo de teste" /></p>
 
 <p>Quando a opção for salva, uma tarja vermelha será exibida na parte superior da tela. Ela será exibida em todas as telas do Backoffice e na tela transacional do Checkout Cielo.</p>
 
@@ -419,8 +419,8 @@ O Checkout Cielo considera 5 tipos de produtos: Material Físico, Digital, Servi
   </thead>
   <tbody>
     <tr>
-      <td><img src="https://developercielo.github.io/images/Checkout/tmbackoffice.png" alt="Tarja vermelha - Backoffice" /></td>
-      <td><img src="https://developercielo.github.io/images/Checkout/tmtransacional.png" alt="Tarja vermelha - Transacional" /></td>
+      <td><img src="https://developercielo.github.io/images/checkout/tmbackoffice.png" alt="Tarja vermelha - Backoffice" /></td>
+      <td><img src="https://developercielo.github.io/images/checkout/tmtransacional.png" alt="Tarja vermelha - Transacional" /></td>
     </tr>
   </tbody>
 </table>
@@ -470,7 +470,7 @@ O Checkout Cielo considera 5 tipos de produtos: Material Físico, Digital, Servi
 
 <p>Na tela de pedidos, dentro de cada transação, há a opção de reenvio do POST de mudança de status.  Basta clicar nos botões azuis, marcados na imagem abaixo:</p>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-detalhe-pedidos.png" alt="Detalhes do pedido" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-detalhe-pedidos.png" alt="Detalhes do pedido" /></p>
 
 <aside class="notice">Os Lojistas da “Loja Virtual Terra Cielo” possuem URL’s de notificação, mudança de Status e Retorno atualizadas automaticamente. Para esses lojistas, não é necessário alterar as URL’s citadas.</aside>
 
@@ -480,7 +480,7 @@ O Checkout Cielo considera 5 tipos de produtos: Material Físico, Digital, Servi
 
 <p>Nesta parte da aba de configurações é possível configurar 4 valores mínimos e descontos por meios de pagamento:</p>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-Configurações-de-valores-Minimos.png" alt="Valor minimo parcela" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-configuracoes-de-valores-minimos.png" alt="Valor minimo parcela" /></p>
 
 <table>
   <thead>
@@ -527,7 +527,7 @@ O Checkout Cielo considera 5 tipos de produtos: Material Físico, Digital, Servi
 
 <p>Basta marcar a caixa de seleção do cartão que deseja disponibilizar no momento do pagamento. Para desabilita-lo, basta desmarcar a caixa de seleção.</p>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-cards.png" alt="Configurando meios de pagamento" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-cards.png" alt="Configurando meios de pagamento" /></p>
 
 <p>O parcelamento é definido por bandeira de cartão. O numero de parcelas maximas disponibilizadas para cada cartão passa a ser definida pelo Lojista.</p>
 
@@ -541,11 +541,11 @@ O Checkout Cielo considera 5 tipos de produtos: Material Físico, Digital, Servi
 
 <aside class="notice">Se o lojista não tem habilitado o antifraude em seu contrato junto a Cielo ou não enviar no POST a solicitação de analise de fraude, a captura automática não será executada caso esteja configurada para ser efetuada com base no status da analise de risco. Caberá ao lojista a captura manual do pedido.</aside>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-anti-fraude.png" alt="Anti fraude" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-anti-fraude.png" alt="Anti fraude" /></p>
 
 <p>Campo valor mínimo de analise AF:</p>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-anti-fraude-valor-minimo.png" alt="Valor mínimo anti fraude" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-anti-fraude-valor-minimo.png" alt="Valor mínimo anti fraude" /></p>
 
 <h4 id="tabela-de-status-do-antifraude">Tabela de status do Antifraude</h4>
 
@@ -608,13 +608,13 @@ O Checkout Cielo considera 5 tipos de produtos: Material Físico, Digital, Servi
 
 <p>Você pode visualizar o status do antifraude acessando o detalhe da compra, na aba Pedidos e clicando no (+)</p>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-status-antifraude.png" alt="Status Antifraude" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-status-antifraude.png" alt="Status Antifraude" /></p>
 
 <h3 id="frete-de-correios--serviços">Frete de Correios &amp; Serviços</h3>
 
 <p>Nesta área você configura as opções de frete disponiveis em sua Loja. Na seção <a href="#informações-sobre-frete">Informações sobre Frete</a> há uma explicação mais detalhada sobre os tipos de fretes disponiveis no Checkout Cielo. Há tambem na área de fretes de Correiros, uma calculadora de frete para consultas (essa calculadora dá o valor de frete de cada tipo de frete cadastrado para um determinado peso e localidade)</p>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-frete-correios.png" alt="Frete Correios" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/tutoriais-checkout/checkout-frete-correios.png" alt="Frete Correios" /></p>
 
 <h1 id="tutorial---link-de-pagamentos">Tutorial - Link de Pagamentos</h1>
 
@@ -635,12 +635,12 @@ Esse tipo de integração é realizado via o cadastro de um conjunto de itens a 
   </thead>
   <tbody>
     <tr>
-      <td><img src="https://developercielo.github.io/images/Checkout/botao.png" alt="Botão" /></td>
+      <td><img src="https://developercielo.github.io/images/checkout/botao.png" alt="Botão" /></td>
       <td style="text-align: center"><strong>Botão</strong></td>
       <td>É um código HTML que ao ser colado em um site, vai direcionar o comprador a tela transacional - Ideal para uso em <strong>hotSites</strong> ou <strong>E-mail Marketing</strong></td>
     </tr>
     <tr>
-      <td><img src="https://developercielo.github.io/images/Checkout/qrcode.png" alt="QRCODE" /></td>
+      <td><img src="https://developercielo.github.io/images/checkout/qrcode.png" alt="QRCODE" /></td>
       <td style="text-align: center"><strong>QRCODE</strong></td>
       <td>Código interpretável por Smartphones e Tablets - Ideal para uso em <strong>Marketing impressos</strong> ou <strong>Digital</strong></td>
     </tr>
@@ -693,7 +693,7 @@ Esse tipo de integração é realizado via o cadastro de um conjunto de itens a 
 
 <h4 id="fluxo-do-link-de-pagamento">Fluxo do Link de Pagamento</h4>
 
-<p><img src="https://developercielo.github.io/images/Checkout/intbt.png" alt="Fluxo de integração Checkout Cielo Botão" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/intbt.png" alt="Fluxo de integração Checkout Cielo Botão" /></p>
 
 <h2 id="criando-um-link-de-pagamentos">Criando Um Link de pagamentos</h2>
 
@@ -713,11 +713,11 @@ Esse tipo de integração é realizado via o cadastro de um conjunto de itens a 
 
 <p><strong>Tela de Cadastro</strong></p>
 
-<p><img src="https://developercielo.github.io/images/Checkout/btcadastro.png" alt="Cadastro de Botão" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/btcadastro.png" alt="Cadastro de Botão" /></p>
 
 <p><strong>Botão Cadastrado:</strong></p>
 
-<p><img src="https://developercielo.github.io/images/Checkout/btcadastro2.png" alt="Cadastro de Botão" /></p>
+<p><img src="https://developercielo.github.io/images/checkout/btcadastro2.png" alt="Cadastro de Botão" /></p>
 
 <p>Abaixo a listagem de itens que devem ser cadastrados para a criação do botão:</p>
 
